// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLocationReducer() - maintains address bar pathname state and current + previous matched location-aware actions 1`] = `
Object {
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
  ],
  "hasSSR": false,
  "hash": undefined,
  "index": 0,
  "kind": "load",
  "length": 1,
  "pathname": "/second/bar",
  "payload": Object {
    "param": "bar",
  },
  "prev": Object {
    "pathname": "/first",
    "payload": Object {},
    "type": "FIRST",
  },
  "query": undefined,
  "state": undefined,
  "type": "SECOND",
  "url": "/second/bar",
}
`;

exports[`getInitialState() returns state.history === undefined when using createBrowserHistory 1`] = `
Object {
  "basename": "",
  "entries": undefined,
  "hasSSR": false,
  "hash": "",
  "index": 0,
  "kind": "init",
  "length": 1,
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hasSSR": false,
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "pathname": "",
    "payload": Object {},
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "type": "FIRST",
  "url": "/first",
}
`;
